# c_fingerprint_identification

./: CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  fingerprint.h  fingerprint_feature.c  fingerprint_feature.h
src/fingerprint_minutae/: fingerprint_minutae.c  fingerprint_minutae.h
src/image/: bit_image.c  bit_image.h  image.c  image.h  stb.c
src/thinning/: destair_holt.c  destair_holt.h  thinning_zhang_suen.c  thinning_zhang_suen.h
test/: CMakeLists.txt
test/fingerprint_minutae/: CMakeLists.txt  test_fingerprint_minutae.c
test/image/: CMakeLists.txt  test_bit_image.c  test_image.c
test/thinning/: CMakeLists.txt  test_thinning_zhang_suen.c
